2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-text.c: #524835 - nautilus crashed with SIGSEGV
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>
	
	* gdk-pixbuf-loader/io-svg.c: #538149 - svg_loader.so does not set license field 
	in GdkPixBufFormat
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-filters.c: #548154 - Nautilus Segmentation fault when displaying SVG file
	
2008-08-26  Dominic Lachowicz <domlachowicz@gmail.com>

	* gdk-pixbuf-loader/io-svg.c: #549418 - build failure: test-display.c 
	io-svg.c format not a string literal and no format arguments
	* test-display.c: Ditto
	
2008-08-25  Dominic Lachowicz <domlachowicz@gmail.com>	

	* rsvg-path.c: 549256 - some arcs are not well drawn in SVG path. From
	Frederic Wang <fred.wang%40free.fr>
	
2008-08-22  Dominic Lachowicz <domlachowicz@gmail.com>

	* tests/rsvg-test.c: Bug #547981 - librsvg-test.c doesn't build on x86_64
	
2008-08-21  Dominic Lachowicz <domlachowicz@gmail.com>

	* rsvg-path.c: Bug #548494 - bad rendering for some wacko
	SVG path data
	
2008-08-04  Simon Budig  <simon@gimp.org>

	* rsvg-styles.[ch]: fix the handling of the stroke-dashoffset
	property.

2008-05-23  Tor Lillqvist  <tml@novell.com>

	* tests/samples/artwork.svg: Use "sans-serif" instead of
	"sanserif".

	* tests/samples/Picasso.svg: Use "sans-serif" instead of
	"sansserif".

2008-05-20  Tor Lillqvist  <tml@novell.com>

	* librsvg-zip.in: Package rsvg-convert.exe instead of the now
	nonexistent rsvg.exe.

2008-04-28  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* rsvg-text.c: Use #elif instead of nested #else #if.

2008-04-28  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* rsvg-text.c: Don't use #else if, but #else and an
	additional #if. Fixes the build with at least gcc 4.2.3.

2008-04-25  Hans Breuer  <hans@breuer.org>

	* rsvg-css.c : use HAVE_STRINGS_H
	* rsvg-path.c : #include "rsvg-private.h" to get common definitions